# Actus

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  pubsub.py
app/agents/: audit.py  builder.py  discovery.py  orchestrator.py  tools.py
app/agents/doc_qa/: parser.py  router.py  tools.py
app/auth/: jwt.py  models.py  router.py  visibility.py
app/automation/: jobs.py  router.py  scheduler.py
app/context/: models.py
app/evals/: __main__.py  assertions.py  loader.py  models.py  runner.py
app/llm/: pii.py  router.py
app/observability/: logging.py  metrics.py
app/ontology/: models.py  registry.py  router.py
app/rag/: indexer.py  models.py  retriever.py
docs/: agent-guide.md  agents.md
evals/: customer_analyst.yaml
migrations/: env.py
migrations/versions/: 7a243024effe_add_vectorindex_pgvector.py  a1b2c3d4e5f6_add_trace_and_teams.py  b2c3d4e5f6a7_add_team_id_indexes.py  c3d4e5f6a7b8_add_token_version.py  d4e5f6a7b8c9_add_team_id_to_ontology.py
scripts/: backfill_rag.py
tests/: conftest.py  test_agents.py  test_auth.py  test_automation.py  test_doc_qa.py  test_hardening.py  test_llm.py  test_rag.py  test_user_management.py  test_workflows.py
tests/integration/: test_auth.py  test_automation.py  test_doc_qa.py  test_main.py  test_ontology_security.py  test_user_management.py  test_workflows.py
tests/unit/: test_automation.py  test_config.py  test_doc_qa.py  test_limiter.py
