[project]
name = "actus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.136.3",
    "litellm>=1.86.1",
    "bcrypt>=4.0.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.2.2",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.0",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.48.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "aiofiles>=23.0.0",
    "redis[asyncio]>=5.0.0",
    "jsonschema>=4.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]
